[tool.poetry]
name = "awswl"
version = "1.2.2"
description = "A project to make it simple to add/remove ip addresses (or CIDR blocks) from an AWS Security group."
authors = [
    "Geoffrey Wiseman <geoffrey.wiseman@codiform.com>"
]
license = "Public Domain"
readme = "README.md"
repository = "https://github.com/geoffreywiseman/awswl"
homepage = "https://github.com/geoffreywiseman/awswl"
keywords = ["aws", "vpn", "securitygroups", "security", "networking", "allowlist", "ssh", "firewall", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.scripts]
awswl = "awswl.main:main"

[tool.poetry.dependencies]
python = "^3.9"
ipaddress = "^1.0.23"
boto3 = "^1.35.62"
requests = "2.32.3"
usingversion = "^0.1.2"
urllib3 = "<2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
moto = "^4.2.2"
mock = "^5.1.0"
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
